refactor base code, added feature to create several players,added a card interface, refactor Client